# govuk-accessible-search

./: .gitignore  README.md  deploy-fastapi-container.sh  deploy-fastapi-local.sh  deploy-functions-local.sh  deploy-functions.sh  deploy-local.sh
.github/workflows/: frontend_build_deploy.yml
backend/: local.settings.json.example  requirements.txt
backend-fastapi/: .env.example  protocol.py  requirements.txt  server.py
backend-functions/: local.settings.json.example  requirements.txt
backend-functions/backend_function/: __init__.py  exceptions.py  function.json
backend-shared/: README.md  pyproject.toml
backend-shared/accessible_search/: handlers.py  preprocessing.py  prompts.py  protocol.py  services.py
backend/backend_function/: __init__.py  exceptions.py  llm.py  prompts.py  services.py
component/: DELETE_tsconfig.json  build.sh  inject-inline-js.py  package.json  webpack.config.js
component/src/: index.css  index.html  index.js  index.ts  main.js
demo/: .gitignore  package.json
demo/www.gov.uk/foreign-travel-advice/: france.atom  france.html
demo/www.gov.uk/foreign-travel-advice/france/: contact-fco-travel-advice-team.html  coronavirus.html  email-signup.html  entry-requirements.html  health.html  local-laws-and-customs.html  money.html  natural-disasters.html  print.html  safety-and-security.html  terrorism.html
demo/www.nhs.uk/: robots.txt
demo/www.nhs.uk/conditions/covid-19/: index.html
demo/www.nhs.uk/conditions/covid-19/covid-19-vaccination/: index.html
docker/: Dockerfile.backend-fastapi
text-client/: main.py  speech.py  tts.py
(+11 files in other folders)
